--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,73 +1,28 @@
-version = 3.7.4
+version = "3.7.2"
 
-runner.dialect = Scala213Source3
+style = default
+
+runner.dialect = scala213source3
+
+project.excludeFilters = [
+  "scalafix/*"
+]
+
 fileOverride {
   "glob:**/scala-3/**" {
     runner.dialect = scala3
   }
 }
 
-project.excludeFilters = [
-  "scalafix/*"
+docstrings.wrap = "no"
+
+maxColumn = 100
+
+rewrite.rules = [
+  AvoidInfix
+  RedundantBraces
+  RedundantParens
+  Imports
+  PreferCurlyFors
 ]
-lineEndings = preserve
-maxColumn = 96
 
-includeCurlyBraceInSelectChains = true
-includeNoParensInSelectChains = true
-
-optIn {
-  breakChainOnFirstMethodDot = false
-  forceBlankLineBeforeDocstring = true
-}
-
-binPack {
-  literalArgumentLists = true
-  parentConstructors = Never
-}
-
-danglingParentheses {
-  defnSite = false
-  callSite = false
-  ctrlSite = false
-  tupleSite = false
-
-  exclude = []
-}
-
-newlines {
-  beforeCurlyLambdaParams = multilineWithCaseOnly
-  afterCurlyLambda = squash
-  implicitParamListModifierPrefer = before
-  sometimesBeforeColonInMethodReturnType = true
-}
-
-align.preset = none
-align.stripMargin = true
-
-assumeStandardLibraryStripMargin = true
-
-docstrings {
-  style = Asterisk
-  oneline = unfold
-}
-
-project.git = false
-
-trailingCommas = never
-
-rewrite {
-  // RedundantBraces honestly just doesn't work, otherwise I'd love to use it
-  rules = [PreferCurlyFors, RedundantParens]
-
-  redundantBraces {
-    maxLines = 1
-    stringInterpolation = true
-  }
-}
-
-rewriteTokens {
-  "⇒": "=>"
-  "→": "->"
-  "←": "<-"
-}
